# Google_Apac_submission

./: .dockerignore  .env.example  .gitignore  LEARNINGS.md  README.md  word_done_so_far.md
demo/: README.md  cymbal_shops_demo.py  fraud_workflow_demo.py  sdk_live_smoke.py
demo/payload_examples/: documents_search.json  documents_upsert.json  products_search.json  products_search_join.json  products_upsert.json  transactions_action_execute.json  transactions_action_register.json  transactions_search.json  transactions_upsert.json
docs/: README.md  alloydb_results_summary.md  api_examples.md  architecture.md  build_order.md  cluster_snapshot.md  deployment.md  filter_behavior.md  live_comparison_checklist.md  ml_integration_research_notes.md  phase1_connection_confirmed.md  pinecone_results_summary.md  python_sdk.md  server.md  testing_with_postman.md  typescript_sdk.md
py/: README.md  pyproject.toml
py/alloynative/: __init__.py  auth.py  capabilities.py  client.py  config.py  connection.py  errors.py  index.py  results.py  sql.py  sync.py  validation.py  version.py
py/tests/: __init__.py  test_auth.py  test_capabilities.py  test_client.py  test_sql.py  test_validation.py
server/: Dockerfile  README.md  action_registry.py  cloudbuild.yaml  dashboard_runtime.py  dependencies.py  grpc_servicer.py  main.py  mcp_tools.py  rest_routes.py  service.yaml
server/static/: index.html
server/tests/: __init__.py  test_dependencies.py  (+3 more)
sql/: README.md  extensions.sql  products_schema.sql  smoke_test.sql
ts/: README.md  package-lock.json  package.json  tsconfig.json
(+4 files in other folders)
